test/sema/methods/self_member.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
struct S {}

fn main() {
  mut s = S{};

  // CHECK: [[# @LINE + 1 ]]:5: error: 'S' has no member called 'Self'
  s.Self;

  // CHECK: [[# @LINE + 1 ]]:6: error: 'S' has no member called 'Self'
  S::Self;
}
